@@ -3,7 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Casey Marshall <casey.marshall@gazzang.com>
 Build-Depends: debhelper (>= 8.0.0), golang-go
-Standards-Version: 3.9.3
+Standards-Version: 3.9.4
 Homepage: http://launchpad.net/hockeypuck
 
 Package: hockeypuck
