@@ -30,6 +30,10 @@ hockeypuck (1.0~a1) precise; urgency=low
     - hget fetch on recovery. Using LevelDB backend. LP: #1044767
     - Add libleveldb package dependency for levigo.
     - Add impossible return to worker for compiler's sake.
+  * cmd/hockeypuck-mgo/main.go, debian/control, peer/peer.go:
+    - Add SKS peering to main hockeypuck server process.
+    - Fix peer configuration options.
+    - Update packaging version.
 
   [ Evan Broder ]
   * Makefile, mgo/client.go, mgo/worker.go:
